# ScrapingCatarinense

./: README.md  main.py  mkdocs.yml  output.html  pyproject.toml
docs/: index.md
src/: categories.py  scraper.py
src/models/: categoria.py  grupo.py  produto.py  subgrupo.py
src/utils/: logger.py
