[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["Matheus Pinter <pintermaciel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
pydantic = "^2.10.3"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
selenium = "^4.27.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
